--- a/nemi/compass/sass/partials/_page.scss
+++ b/nemi/compass/sass/partials/_page.scss
@@ -19,12 +19,13 @@ body {
 		border: none;
 		height: 17px;
 		width: 20px;
+		cursor: pointer;
 		
 		img {
-			vertical-align: middle;
 			padding: 0px;
 			height: 17px;
 			width: 20px;
+			vertical-align: middle;
 		}
 	}
 	th, td {
